[package]
name = "uk-ch-uri-rust"
version = "0.1.0"
authors = ["Arjan van Eersel <arjan@dbabs.com>"]
description = "Rust implementation of the globire library for the Companies House URI. The library gets UK companies as Rust objects."
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.54"
serde_json = "1.0.17"
serde_derive = "1.0.54"
reqwest = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
